--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 ADOSZAM_ORSZAGKODJA=HU
 ADOSZAM_ELSO_NYOLC_SZAMJEGYE=00000000
 NYILVANTARTASI_SZAM=00000000
+UGYFELKAPU_FELHASZNALONEV=
+UGYFELKAPU_JELSZO=
