--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-ADOSZAM_ORSZAGKODJA=HU
-ADOSZAM_ELSO_NYOLC_SZAMJEGYE=00000000
+ADOSZAM=HU00000000-0-00
 NYILVANTARTASI_SZAM=00000000
 UGYFELKAPU_FELHASZNALONEV=
 UGYFELKAPU_JELSZO=
+MKIK_JELSZO=
