Implement: adoszamla test

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 ADOSZAM=HU00000000-0-00
 NYILVANTARTASI_SZAM=00000000
+ADOAZONOSITO_JEL=0000000000
 UGYFELKAPU_FELHASZNALONEV=
 UGYFELKAPU_JELSZO=
 MKIK_JELSZO=
